 - Add support to get block compressed format from STLMatrix
 - Add detection of block structures in the dofmap for vector equations
 - Expose PETSc GAMG parameters
 - Modify SystemAssembler to support separate assembly of A and b
 - Fixes bug where child/parent hierarchy in Python were destroyed
 - Add utility script dolfin-get-demos
 - MeshFunctions in python now support iterable protocol
 - Expose ufc::dofmap::tabulate_entity_dofs to GenericDofMap interface
 - Expose ufc::dofmap::num_entity_dofs to GenericDofMap interface
 - Allow setting of row dof coordinates in preconditioners (only works with PETSc backed for now)
 - Expose more PETSc/ML parameters
 - Improve speed to tabulating coordinates in some DofMap functions
 - Feature: Add support for passing a Constant as default value to a CompiledExpression
 - Fix bug in dimension check for 1-D ALE
 - Remove some redundant graph code
 - Improvements in speed of parallel dual grapj builder
 - Fix bug in XMDF output for cell-based Functions
 - Fixes for latest version of clang compiler
 - LocalSolver class added to efficiently solve cell-wise problems
 - New implementation of periodic boundary conditions. Now incorporated into the dofmap
 - Optional arguments to assemblers removed
 - SymmetricAssembler removed
 - Domains for assemblers can now only be attached to forms
 - SubMesh can now be constructed without a CellFunction argument, if the MeshDomain contains marked celldomains.
 - MeshDomains are propagated to a SubMesh during construction
 - Simplify generation of a MeshFunction from MeshDomains: No need to call mesh_function with mesh
 - Rename dolfin-config.cmake to DOLFINConfig.cmake
 - Use CMake to configure JIT compilation of extension modules
 - Feature: Add vertex_to_dof_map to DofMap, which map vertex indices to dolfin dofs
 - Feature: Add support for solving on m dimensional meshes embedded in n >= m dimensions
1.1.0 [2013-01-08]